# spitfireiii

./: .gitignore  LICENSE  Makefile.am  README.md  TODO.txt  configure.ac  main.cpp  spitfire.sln  spitfire.vcxproj  spitfireiii.sln  spitfireiii.vcxproj
src/: Alliance.cpp  Alliance.h  AllianceCore.cpp  AllianceCore.h  City.cpp  City.h  Client.cpp  Client.h  Hero.cpp  Hero.h  Map.cpp  Map.h  Server.cpp  Server.h  Tile.cpp  Tile.h  amf3.cpp  amf3.h  combat.cpp  combat.h  connection.cpp  connection.h  funcs.cpp  funcs.h  includes.h  main.cpp  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  structs.h
src/packets/: packet.cpp  packet.h  palliance.cpp  palliance.h  parmy.cpp  parmy.h  pcastle.cpp  pcastle.h  pcity.cpp  pcity.h  pcommon.cpp  pcommon.h  pfield.cpp  pfield.h  pfortifications.cpp  pfortifications.h  pfriend.cpp  pfriend.h  pfurlough.cpp  pfurlough.h  pgameclient.cpp  pgameclient.h  phero.cpp  phero.h  pinterior.cpp  pinterior.h  plogin.cpp  plogin.h  pmail.cpp  pmail.h  pquest.cpp  pquest.h  prank.cpp  prank.h  preport.cpp  preport.h  pserver.cpp  pserver.h  pshop.cpp  pshop.h  (+8 more)
